// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RefboxField shows a cyan refbox field with all buttons 1`] = `
<styled.div
  isPenalty={false}
>
  <RefboxButton
    key="KO"
    onClick={[Function]}
    teamColor="cyan"
  >
    KO
  </RefboxButton>
  <RefboxButton
    key="FK"
    onClick={[Function]}
    teamColor="cyan"
  >
    FK
  </RefboxButton>
  <RefboxButton
    key="GK"
    onClick={[Function]}
    teamColor="cyan"
  >
    GK
  </RefboxButton>
  <RefboxButton
    key="TI"
    onClick={[Function]}
    teamColor="cyan"
  >
    TI
  </RefboxButton>
  <RefboxButton
    key="C"
    onClick={[Function]}
    teamColor="cyan"
  >
    C
  </RefboxButton>
  <RefboxButton
    key="P"
    onClick={[Function]}
    teamColor="cyan"
  >
    P
  </RefboxButton>
</styled.div>
`;

exports[`RefboxField shows a magenta refbox field with all buttons 1`] = `
<styled.div
  isPenalty={false}
>
  <RefboxButton
    key="KO"
    onClick={[Function]}
    teamColor="magenta"
  >
    KO
  </RefboxButton>
  <RefboxButton
    key="FK"
    onClick={[Function]}
    teamColor="magenta"
  >
    FK
  </RefboxButton>
  <RefboxButton
    key="GK"
    onClick={[Function]}
    teamColor="magenta"
  >
    GK
  </RefboxButton>
  <RefboxButton
    key="TI"
    onClick={[Function]}
    teamColor="magenta"
  >
    TI
  </RefboxButton>
  <RefboxButton
    key="C"
    onClick={[Function]}
    teamColor="magenta"
  >
    C
  </RefboxButton>
  <RefboxButton
    key="P"
    onClick={[Function]}
    teamColor="magenta"
  >
    P
  </RefboxButton>
</styled.div>
`;

exports[`RefboxField shows a magenta refbox with penalty buttons 1`] = `
<styled.div
  isPenalty={true}
>
  <RefboxButton
    key="Soft"
    onClick={[Function]}
    teamColor="magenta"
  >
    Soft
  </RefboxButton>
  <RefboxButton
    key="Medium"
    onClick={[Function]}
    teamColor="magenta"
  >
    Medium
  </RefboxButton>
  <RefboxButton
    key="Hard"
    onClick={[Function]}
    teamColor="magenta"
  >
    Hard
  </RefboxButton>
</styled.div>
`;
